# ferrox

./: .gitignore  README.md  cargo.toml
crates/ferrox/: Cargo.toml
crates/ferrox-actions/: Cargo.toml
crates/ferrox-actions/src/: action.rs  birdeye.rs  coingecko.rs  dexscreener.rs  gmgn.rs  lib.rs  solana.rs
crates/ferrox-actions/src/birdeye/: client.rs
crates/ferrox-actions/src/coingecko/: CoinGecko Pro API.postman_collection.json  pro.rs
crates/ferrox-actions/src/dexscreener/: client.rs
crates/ferrox-actions/src/solana/jupiter/: dca.rs
crates/ferrox-wallet/: Cargo.toml
crates/ferrox-wallet/src/: lib.rs  simple_wallet_manager.rs
crates/ferrox/src/: action.rs  agent.rs  lib.rs
crates/ferrox/src/agent/: null_agent.rs  text_agent.rs
crates/openai-api/: Cargo.toml
crates/openai-api/src/: completions.rs  models.rs
examples/basic-example/: Cargo.toml
examples/basic-example/src/: main.rs
