[package]
name = "ferrox"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.85"
teloxide = "^0.12"
openai-api = { path = "../openai-api" }
tokio = { version = "1.43.0", features = ["full"] }
serde = "1.0.217"
serde_json = "1.0.135"
ferrox-actions = { path = "../ferrox-actions" }
uuid = "1.12.1"
