[package]
name = "ferrox"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = "^0.12"
openai-api = { path = "../openai-api" }
tokio = { version = "^1.32.0", features = ["full"] }
serde = "1.0.217"
serde_json = "1.0.135"
ferrox-actions = { path = "../ferrox-actions" }
ferrox-wallet = { path = "../ferrox-wallet" }
uuid = "1.12.1"
